fixed new textarea margins so they match up with past commands and replaced updated the meta viewport tag to prevent page zooming on mobile

--- a/resume.css
+++ b/resume.css
@@ -138,4 +138,7 @@ textarea#commands {
     background-color: transparent;
     resize: none;
     outline: none;
+	margin-left: -2px;
+	margin-top: -2px;
+	font-weight: bold;
 }
